--- a/Travelgram/src/styles.css
+++ b/Travelgram/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../node_modules/ngx-toastr/toastr.css';
+
+body{
+    position: relative;
+    min-width: 100%;
+    min-height: 100vh;
+}
