done with the signup component and storing data to db

--- a/Travelgram/src/app/layout/footer/footer.component.html
+++ b/Travelgram/src/app/layout/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="container-fluid bg-primary">
+    <div class="row p-2">
+        <div class="col-4 text-center text-white">
+            Ankit app
+        </div>
+        <div class="col-8 text-center text-white">
+            &copy; 2020 covid crisis
+        </div>
+    </div>
+</footer>
