--- a/Travelgram/src/app/layout/header/header.component.html
+++ b/Travelgram/src/app/layout/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg bg-dark">
+    <a class="navbar-brand" href="#">Travelgram</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li *ngIf="email">{{email}}}</li>
+        <li class="nav-item" >
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/']">Home</a>
+        </li>
+        <li class="nav-item" *ngIf="!email" >
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/signup']">signup</a>
+        </li>
+        <li class="nav-item" *ngIf="!email">
+          <a class="nav-link"  [routerLink]="['/signin']">signIn</a>
+        </li>
+        <li class="nav-item" *ngIf="email">
+          <a class="nav-link" (click)="handleSignOut()">LogOut</a>
+        </li>
+        <li class="nav-item" *ngIf="email">
+          <a class="nav-link" [routerLink]="['/addpost']">posts</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
