--- a/Travelgram/src/app/layout/header/header.component.css
+++ b/Travelgram/src/app/layout/header/header.component.css
@@ -1,3 +1,8 @@
 .active{
     border-bottom: 1px solid white;
 }
+
+.logout:hover{
+    cursor: pointer;
+    border-bottom: 2px solid springgreen;
+}
