--- a/Travelgram/src/app/layout/header/header.component.html
+++ b/Travelgram/src/app/layout/header/header.component.html
@@ -2,22 +2,22 @@
     <a class="navbar-brand" href="#">Travelgram</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li *ngIf="email">{{email}}}</li>
-        <li class="nav-item" >
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/']">Home</a>
+        <li class="name text-white mt-2 pr-4 pl-4" *ngIf="email">{{email}}</li>
+        <li class="nav-item" *ngIf="email">
+          <a class="nav-link"  [routerLink]="['']" >Home</a>
         </li>
         <li class="nav-item" *ngIf="!email" >
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/signup']">signup</a>
+          <a class="nav-link" routerLink="/signup" RouterLinkActive="active" >signup</a>
         </li>
         <li class="nav-item" *ngIf="!email">
-          <a class="nav-link"  [routerLink]="['/signin']">signIn</a>
+          <a class="nav-link" routerLink="/signin" routerLinkActive="active" >signIn</a>
         </li>
         <li class="nav-item" *ngIf="email">
-          <a class="nav-link" (click)="handleSignOut()">LogOut</a>
+          <a class="nav-link logout text-white" (click)="handleSignOut()" routerLinkActive="active" >LogOut</a>
         </li>
         <li class="nav-item" *ngIf="email">
-          <a class="nav-link" [routerLink]="['/addpost']">posts</a>
-        </li>
+          <a class="nav-link" routerLinkActive="active" routerLink="/addpost">posts</a>
+        </li> 
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search">
