--- a/Travelgram/src/app/components/user/user.component.html
+++ b/Travelgram/src/app/components/user/user.component.html
@@ -1,1 +1,9 @@
-<p>user works!</p>
+<div class="card mb-3 horizontal-display">
+    <div class="d-flex justify-content-center align-items-center">
+        <img [src]="user.picture" width="50" height="50" class= "rounded-circle ml-2" alt="">
+    </div>
+<div class="card body">
+    <h5 class="card-title">{{user.name | uppercase}}</h5>
+    <p class="card-text">{{user.bio}}</p>
+</div>
+</div>
